<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgm"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/dashbord"
        android:layout_width="wrap_content"
        android:layout_height="300sp"
        android:background="@drawable/rounded_button_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20sp">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/math_quiz_game"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#E00BF8"
            android:text="@string/start_game"
            android:textColor="@color/white">

        </Button>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/gamelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level_1"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="20sp"
            android:text="@string/score_0"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp">


            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/CircularProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="visible" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:text="@string/_10"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20sp"
                android:background="@color/white">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="150sp"
                android:background="@color/white">

            </TextView>


            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="20sp"
                android:background="#7E000000"
                android:padding="35sp"
                android:text="@string/_55_69"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <Button
                    android:id="@+id/questionNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#D82BFF"
                    android:text="@string/question_1_100"
                    android:textColor="@color/white"
                    android:textSize="17sp">

                </Button>

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>

                <Button
                    android:id="@+id/option1Button"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="@string/_134"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </Button>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/b"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>

                <Button
                    android:id="@+id/option2Button"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="134"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </Button>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/c"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>


                <Button
                    android:id="@+id/option3Button"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="134"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </Button>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/d"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>

                <Button
                    android:id="@+id/option4Button"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="134"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </Button>

            </RelativeLayout>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp">

        </Space>

    </LinearLayout>

</LinearLayout>